--- a/Final-Website/CSS/FinalWebsite.css
+++ b/Final-Website/CSS/FinalWebsite.css
@@ -65,28 +65,35 @@ body {
       .card{
         border: 1px solid gray;
     
-        width: 200px;
-        height: 270px;
-        border-radius: 15px;
+        width: 267px;
+        height: 298px;
+        border-radius: 10px;
         padding: 25px;
+        padding-top: 5px;
         background-color: white;
-        margin: 15px;
+        margin: 20px;
+        
     }
     
     #text-shadow{
         text-shadow: 0px 1px 2px lightgray;
     }
     .cards{
-        width: 100vw;
-    
+       
+       margin-left: 5%;
         display:flex;
         align-items: center;
         justify-content: flex-start;
         flex-wrap: wrap;
+     
+        
+    }
+    .continer{
+      align-content: flex-start;
     }
     
     #black{
-        background-color: white;
+        
         color:black;
     }
     
@@ -94,6 +101,16 @@ body {
         background-color: lightpink;
         box-shadow: 0px 1px 2px lightgrey;
     }
+
+    #highlight2{
+      background-color: lightcoral;
+      box-shadow: 0px 1px 2px lightgrey;
+  }
+
+  #highlight3{
+    background-color: lightseagreen;
+    box-shadow: 0px 1px 2px lightgrey;
+}
 
     /*.testweather{
         width: 110%;
@@ -105,4 +122,14 @@ body {
         margin-left:5%;
     }
 
-   
+    #lendar{
+      width:94%;
+      height:750px;
+    }
+
+    #references{
+      width:94%;
+      height:90px;
+    }
+
+  
