--- a/Final-Website/CSS/FinalWebsite.css
+++ b/Final-Website/CSS/FinalWebsite.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
 
+
 body {
     font-family: 'Fjalla One', sans-serif;
     margin:0%;
+    background-color: white;
+    
 }
 
 .parent{
@@ -98,7 +101,7 @@ body {
     }
     
     #highlight{
-        background-color: lightpink;
+        background-color: skyblue;
         box-shadow: 0px 1px 2px lightgrey;
     }
 
@@ -129,7 +132,13 @@ body {
 
     #references{
       width:94%;
-      height:90px;
+      height: 210px;
     }
+
+    .links{
+      position:absolute;
+      left:50px;
+    }
+
 
   
