Minor last changes

--- a/Final-Website/CSS/FinalWebsite.css
+++ b/Final-Website/CSS/FinalWebsite.css
@@ -115,6 +115,10 @@ body {
     box-shadow: 0px 1px 2px lightgrey;
 }
 
+#highlight4{
+  background-color: #63d867;
+}
+
     /*.testweather{
         width: 110%;
         height: 700%;
@@ -139,6 +143,7 @@ body {
       position:absolute;
       left:50px;
     }
+
 
 
   
